--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -33,3 +33,4 @@
 @import "components/_text-image-bg";
 @import "components/_audio";
 @import "components/_teaser";
+@import "components/_text-image-header";
