--- a/styles/components/_header-top.scss
+++ b/styles/components/_header-top.scss
@@ -112,6 +112,16 @@
       height: 100%;
       object-fit: cover;
     }
+    video{
+      position: absolute;
+      display: block;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index:20;
+    }
   }
 
   .header-inner-content__text {
