--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -1,14 +1,53 @@
 
 // Intro page.
 .container-video-intro {
+  &.video-no-played{
+    .header-inner-content__img{
+      width: 100%;
+      height: 100%;
+      border-radius:0%;
+    }
+    .header-inner-content__img.image{
+      //position: relative;
+    }
+    .content-header__container{
+      border-radius: 0%;
+      &.wrapper{
+        height: 100vh;
+      }
+    }
+  }
   position: relative;
+  .mute_button {
+    margin-bottom: 5rem;
 
+    button {
+      margin-bottom: $grid-gutter-width / 2;
+    }
+
+    @include media-breakpoint-up(md) {
+      position: fixed;
+      bottom: 20px;
+      right: 30px;
+      margin: 0;
+      z-index: 4;
+    }
+
+  }
   video {
     width: 100%;
     height: 100%;
     object-fit: cover;
     transition: all 0.2s;
 
+  }
+  .video-circle {
+    video{
+      border-radius: 50%;
+      //position: absolute;
+      width:400px;
+      height: 400px;
+    }
   }
   .video-intro{
     //transform:translateX(0%);
@@ -42,7 +81,7 @@
     bottom: 50%;
     left: 50%;
     transform: translate(-50%, 50%);
-
+    z-index:60;
     &:hover {
       background-color: rgba($color-white, .8);
     }
@@ -69,6 +108,7 @@
     left: 50%;
     transform: translate(-50%, 50%);
     opacity: 0;
+    z-index:60;
 
     &:hover {
       background-color: rgba($color-white, 1);
