--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -11,7 +11,7 @@ footer[role="contentinfo"] {
     margin-bottom: 5rem;
 
     button {
-      margin-bottom: $grid-gutter-width / 2;
+      margin-bottom: math.div($grid-gutter-width, 2);
     }
 
     @include media-breakpoint-up(md) {
