Sync animation duration between carousel and elements into the slide.

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -110,3 +110,5 @@ $round-image-size-big: 580px;
 
 $icon-button-size: 64px;
 $icon-button-size--small: 48px;
+
+$main-carousel-transition-duration: 1.5s
