--- a/styles/embla.scss
+++ b/styles/embla.scss
@@ -41,7 +41,7 @@
   -webkit-touch-callout: none;
   -khtml-user-select: none;
   -webkit-tap-highlight-color: transparent;
-  transition: all 1s;
+  transition: all $main-carousel-transition-duration;
 
   .no_selected {
     z-index: -1;
