--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -34,3 +34,4 @@
 @import "components/_audio";
 @import "components/_teaser";
 @import "components/_text-image-header";
+@import "components/_text-large-image";
