Avoid vertical scroll disappear during slide horizontal transition for desktop devices.

--- a/styles/embla.scss
+++ b/styles/embla.scss
@@ -7,11 +7,19 @@
   margin-left: auto;
   height: 100vh;
   margin-right: auto;
+
+  // Workaround to not lost the scroll bar on
+  // desktop devices during the horizontal transition.
+  @media (hover: hover) {
+    height: 101vh;
+  }
+
   &.transitioning{
     .actions{
       display: none !important;
     }
   }
+
   &.page-carousel {
     min-width: 30vw;
 
