Move line separator from slide to content to avoid cut it

--- a/styles/embla.scss
+++ b/styles/embla.scss
@@ -16,7 +16,12 @@
 
   &.transitioning{
     .actions{
-      display: none !important;
+      opacity: 0;
+    }
+    + #carouselContent {
+      .line-separator {
+        opacity: 0;
+      }
     }
   }
 
