--- a/styles/components/_separator.scss
+++ b/styles/components/_separator.scss
@@ -1,7 +1,7 @@
 
 .line-separator {
   position: relative;
-  padding: $default-section-padding * 2 0;
+  padding: $default-section-padding 0;
   width: 100%;
 
   &:before {
@@ -18,17 +18,15 @@
     pointer-events: none;
   }
 
-  &.line-separator--half-height {
-    padding: $default-section-padding 0;
+  &.line-separator--overflowed-top-1-3{
+    padding: math.div($default-section-padding, 1.5) 0;
   }
 
-  &.line-separator--overflowed {
+  &.line-separator--overflowed-top-1-3 {
     &:before {
-      height: 200%;
+      height: 150%;
+      top: -50%;
     }
   }
 
-  @include media-breakpoint-up(lg) {
-    margin-bottom: 0;
-  }
 }
