Issue #21: Image rounded

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -115,4 +115,4 @@ $icon-button-size: 64px;
 $icon-button-size--small: 48px;
 
 $main-carousel-transition-duration: 1.5s;
-$scroll-down-transition-duration: 1s;
+$scroll-down-transition-duration: .6s;
