--- a/styles/components/_teaser.scss
+++ b/styles/components/_teaser.scss
@@ -7,6 +7,9 @@
   text-align: center;
 
   .teaser__image {
+    width: 272px;
+    height: 272px;
+    object-fit: cover;
     margin-bottom: 40px;
   }
 
