--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -35,3 +35,4 @@
 @import "components/_teaser";
 @import "components/_text-image-header";
 @import "components/_text-large-image";
+@import "components/_tag";
