--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -36,3 +36,4 @@
 @import "components/_text-image-header";
 @import "components/_text-large-image";
 @import "components/_tag";
+@import "components/_header-2036";
