--- a/styles/_atoms.scss
+++ b/styles/_atoms.scss
@@ -48,7 +48,7 @@ a {
   display: inline-block;
   overflow: hidden;
   border-radius: 50%;
-  border: 12px solid $color-white;
+  border: 8px solid $color-white;
   box-shadow: $default-box-shadow;
   background-color: $color-white;
   max-width: $round-image-size;
@@ -57,6 +57,10 @@ a {
 
   &.size--big {
     max-width: $round-image-size-big;
+  }
+
+  @include media-breakpoint-up(md){
+    border-width: 12px;
   }
 }
 
