--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -52,6 +52,8 @@
   }
 
   .header-inner-content__img {
+    z-index: 2;
+
     .image {
       display: block;
       position: absolute;
@@ -67,6 +69,7 @@
     text-transform: uppercase;
     font-size: 2em;
     line-height: 1em;
+    letter-spacing: 15px;
   }
 
   .pretitle,
@@ -92,19 +95,15 @@
 }
 
 .header-2036__title {
+  display: flex;
+  flex-direction: column;
   position: absolute;
-  bottom: 50%;
+  top: 20px;
   width: 100%;
-
-  > span {
-    margin: 0 45px;
-  }
-
-  .header-2036__title__3 {
-    margin-left: 300px;
-  }
+  z-index: 2;
 
   svg {
+    width: 62px;
     overflow: visible;
 
     path {
@@ -112,6 +111,24 @@
         drop-shadow(-3px -3px 6px rgba(255, 255, 255, .5))
         drop-shadow(2px 2px 6px rgba(95, 92, 89, .12))
         drop-shadow(4px 4px 11px rgba(177, 167, 162, .4));
+    }
+  }
+
+  @include media-breakpoint-up(md) {
+    display: block;
+    top: auto;
+    bottom: 50%;
+
+    > span {
+      margin: 0 45px;
+    }
+
+    .header-2036__title__3 {
+      margin-left: 300px;
+    }
+
+    svg {
+      width: 89px;
     }
   }
 }
@@ -124,29 +141,30 @@
     position: absolute;
     bottom: 50%;
     max-width: unset;
-    width: 268px;
-    padding-top: 268px;
-    margin-bottom:  $h2-font-size + math.div($default-separation, $rem-in-px);
+    width: 130px;
+    padding-top: 130px;
+    margin-bottom: $h2-font-size + math.div($default-separation, $rem-in-px);
     transform: translate(0, 50%);
     box-sizing: content-box;
     z-index: 10;
     will-change: width, padding;
     transition:
-            width $scroll-down-transition-duration math.div($scroll-down-transition-duration, 3) ease-out,
-            padding-top $scroll-down-transition-duration math.div($scroll-down-transition-duration, 3) ease-out,
-            opacity math.div($scroll-down-transition-duration, 2) ease-out,
-            bottom math.div($scroll-down-transition-duration, 2) ease-out,
-            transform math.div($scroll-down-transition-duration, 2) ease-out,
-            margin-bottom math.div($scroll-down-transition-duration, 2) ease-out;
+      width $scroll-down-transition-duration math.div($scroll-down-transition-duration, 3) ease-out,
+      padding-top $scroll-down-transition-duration math.div($scroll-down-transition-duration, 3) ease-out,
+      opacity math.div($scroll-down-transition-duration, 2) ease-out,
+      bottom math.div($scroll-down-transition-duration, 2) ease-out,
+      transform math.div($scroll-down-transition-duration, 2) ease-out,
+      margin-bottom math.div($scroll-down-transition-duration, 2) ease-out;
 
     @include media-breakpoint-up(sm) {
-      width: 268px;
-      padding-top: 268px;
+      width: 130px;
+      padding-top: 130px;
     }
 
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(md) {
       width: 268px;
       padding-top: 268px;
+      margin-left: -170px;
     }
 
     @include media-breakpoint-up(xl) {
@@ -154,7 +172,7 @@
       padding-top: 268px;
     }
 
-    video{
+    video {
       position: absolute;
       display: block;
       top: 0;
@@ -168,7 +186,7 @@
 
   .header-inner-content__text {
     position: relative;
-    z-index: 1;
+    z-index: 100;
     padding-left: math.div($grid-gutter-width, 2);
     padding-right: math.div($grid-gutter-width, 2);
     padding-top: $round-image-size-small + $default-separation;
@@ -180,11 +198,11 @@
     }
 
     @include media-breakpoint-up(lg) {
-      padding-top: $round-image-size-medium + $default-separation;
+      padding-top: $round-image-size-medium;
     }
 
     @include media-breakpoint-up(xl) {
-      padding-top: $round-image-size-big + $default-separation;
+      padding-top: $round-image-size-medium;
     }
   }
 
@@ -206,6 +224,10 @@
       overflow: hidden;
     }
 
+    .header-2036__title {
+      opacity: 0;
+    }
+
     .header-inner-content__img {
       bottom: math.div($default-separation, 3);
       width: 110vw;
@@ -225,6 +247,10 @@
         width: 110vh;
         padding-top: 110vh;
       }
+
+      @include media-breakpoint-up(md) {
+        margin-left: 0;
+      }
     }
 
     .header-inner-content__text {
@@ -237,6 +263,7 @@
 
     .title {
       @extend .header-xlarge;
+      font-family: $font-family-sans-serif;
       margin: math.div($grid-gutter-width, 2) 0;
     }
 
