IMAGES - Added script for image optimization and some srcSet in components

--- a/styles/_atoms.scss
+++ b/styles/_atoms.scss
@@ -94,6 +94,6 @@ a {
     display: block;
     width: 40px;
     height: 40px;
-    background: url("../public/images/close.svg") no-repeat center center;
+    background: url("../public/svg/close.svg") no-repeat center center;
   }
 }
