--- a/styles/components/_accordion.scss
+++ b/styles/components/_accordion.scss
@@ -26,7 +26,7 @@
       width: 48px;
       height: 48px;
       margin-left: $grid-gutter-width;
-      background: url("../../public/images/plus.svg") no-repeat center center $color_white;
+      background: url("../../public/svg/plus.svg") no-repeat center center $color_white;
       border-radius: 50%;
       box-shadow: $default-box-shadow;
       transition: box-shadow .6s ease-in-out;
@@ -38,7 +38,7 @@
 
     &[aria-expanded="true"] {
       &::after {
-        background-image: url("../../public/images/minus.svg");
+        background-image: url("../../public/svg/minus.svg");
       }
     }
 
