--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -64,8 +64,8 @@ $h2-font-size: $font-size-base * 2.778; // 50px
 $h2-font-size--desktop: $font-size-base * 3.556; // 64px
 $h3-font-size: $font-size-base * 2.222; // 40px
 $h3-font-size--desktop: $font-size-base * 2.889; // 52px
-//$h4-font-size: $font-size-base * 2.222; // 40px
-//$h4-font-size--desktop: $font-size-base * 2.889; // 52px
+$h4-font-size: $font-size-base * 2.222; // 40px
+$h4-font-size--desktop: $font-size-base * 2.889; // 52px
 //$h5-font-size: $font-size-base * 1.25;
 //$h6-font-size: $font-size-base !default;
 //
