Issue #11: Home heade bg transition when expanded

--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -223,7 +223,7 @@
 
   // ANIMATION ACTIVE
   &[data-animation="active"] {
-    background: $body-bg;
+    background: $body-bg !important;
 
     .header-inner-content {
       overflow: hidden;
