VIDEO - Opacity set when video is not played and is the first time

--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -21,6 +21,12 @@
         height: 100vh;
       }
     }
+    .video-paused{
+      video{
+        opacity: 0.5;
+        transition: opacity 1s;
+      }
+    }
   }
 
   .mute_button {
