--- a/styles/components/_header-2036.scss
+++ b/styles/components/_header-2036.scss
@@ -67,9 +67,13 @@
 
   .title {
     text-transform: uppercase;
-    font-size: 2em;
+    font-size: 1em;
     line-height: 1em;
     letter-spacing: 15px;
+
+    @include media-breakpoint-up(sm) {
+      font-size: 2em;
+    }
   }
 
   .title_expanded {
@@ -102,13 +106,24 @@
 .header-2036__title {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   position: absolute;
-  top: 20px;
+  top: 80px;
   width: 100%;
   z-index: 2;
 
+  span {
+    display: block;
+    margin-bottom: 30px;
+  }
+
+  .header-2036__title__3 {
+    margin-top: 150px;
+  }
+
   svg {
     width: 62px;
+    height: 88px;
     overflow: visible;
 
     path {
@@ -119,8 +134,12 @@
     }
   }
 
+  @include media-breakpoint-up(sm) {
+    top: 100px
+  }
+
   @include media-breakpoint-up(md) {
-    display: block;
+    flex-direction: row;
     top: auto;
     bottom: 50%;
 
@@ -129,11 +148,12 @@
     }
 
     .header-2036__title__3 {
-      margin-left: 300px;
+      margin: 0 0 0 300px;
     }
 
     svg {
-      width: 89px;
+      width: 130px;
+      height: inherit;
     }
   }
 }
@@ -194,13 +214,9 @@
     position: relative;
     padding-left: math.div($grid-gutter-width, 2);
     padding-right: math.div($grid-gutter-width, 2);
-    padding-top: $round-image-size-small + $default-separation;
+    padding-top: 700px;
     max-width: map-get($container-max-widths, 'lg');
     transition: all $scroll-down-transition-duration ease-out;
-
-    @include media-breakpoint-up(sm) {
-      padding-top: $round-image-size + $default-separation;
-    }
 
     @include media-breakpoint-up(lg) {
       padding-top: $round-image-size-medium;
@@ -251,7 +267,7 @@
 
       @media (orientation: portrait) {
         width: 110vh;
-        padding-top: 110vh;
+        height: 110vh;
       }
 
       @include media-breakpoint-up(md) {
