Issue #11: Vimeo video responsive

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -37,3 +37,4 @@
 @import "components/_text-large-image";
 @import "components/_tag";
 @import "components/_header-2036";
+@import "components/_video";
