--- a/styles/components/_header-top.scss
+++ b/styles/components/_header-top.scss
@@ -133,12 +133,12 @@
     transform: translate(0, 50%);
     box-sizing: border-box;
     transition:
-            width $scroll-down-transition-duration linear,
-            height $scroll-down-transition-duration linear,
-            opacity math.div($scroll-down-transition-duration, 2) ease-in-out,
-            bottom $scroll-down-transition-duration linear,
-            transform $scroll-down-transition-duration linear,
-            margin-bottom $scroll-down-transition-duration linear;
+      width $scroll-down-transition-duration linear,
+      height $scroll-down-transition-duration linear,
+      opacity math.div($scroll-down-transition-duration, 2) ease-in-out,
+      bottom $scroll-down-transition-duration linear,
+      transform $scroll-down-transition-duration linear,
+      margin-bottom $scroll-down-transition-duration linear;
 
     @include media-breakpoint-up(sm) {
       width: $round-image-size;
@@ -175,7 +175,7 @@
     padding-left: math.div($grid-gutter-width, 2);
     padding-right: math.div($grid-gutter-width, 2);
     padding-top: $round-image-size-small + $default-separation;
-    max-width: map-get($container-max-widths, 'xs');
+    max-width: map-get($container-max-widths, 'md');
     transition: all $scroll-down-transition-duration ease-out;
 
     @include media-breakpoint-up(sm) {
