Issue #11: Bottom navigation supports br for the titles

--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -126,8 +126,7 @@
 body.full_video {
   .header-menu,
   .embla__button,
-  .actions,
-  #carouselContent {
+  .actions {
     display: none;
   }
 }
