--- a/styles/components/_header-top.scss
+++ b/styles/components/_header-top.scss
@@ -20,6 +20,8 @@
       margin-left $main-carousel-transition-duration ease-in-out;
     width: 100%;
     margin-left: 0;
+    transform: translate(0, 0);
+    opacity: 1;
     z-index: 2;
 
     .no_selected & {
@@ -43,31 +45,93 @@
 
     .first & {
       @include media-breakpoint-up(sm) {
-        //transform: translateX(calc(50% - #{math.div($round-image-size, 2) - 50px}));
+        // Animation version 1
         margin-left: calc(50% - #{math.div($round-image-size, 2) - 50px});
+
+        // Animation version 2
+        //transform: translate(calc(50% - #{math.div($round-image-size, 2) - 50px}), 0);
+
+        // Animation version 3
+        //transform: translateX(- math.div($round-image-size, 2) + 50px);
+        //margin-left: 50%;
+
+        // Animation version 4
+        //transform: translate(50%, 0);
+        //margin-left: - math.div($round-image-size, 2) + 50px;
       }
       @include media-breakpoint-up(lg) {
-        //transform: translateX(calc(50% - #{math.div($round-image-size-medium, 2) - 50px}));
+        // Animation version 1
         margin-left: calc(50% - #{math.div($round-image-size-medium, 2) - 50px});
+
+        // Animation version 2
+        //transform: translate(calc(50% - #{math.div($round-image-size-medium, 2) - 50px}), 0);
+
+        // Animation version 3
+        //transform: translateX(- math.div($round-image-size-medium, 2) + 50px);
+        //margin-left: 50%;
+
+        // Animation version 4
+        //margin-left: - math.div($round-image-size-medium, 2) + 50px;
       }
       @include media-breakpoint-up(xl) {
-        //transform: translateX(calc(50% - #{math.div($round-image-size-big, 2) - 100px}));
+        // Animation version 1
         margin-left: calc(50% - #{math.div($round-image-size-big, 2) - 100px});
+
+        // Animation version 2
+        //transform: translate(calc(50% - #{math.div($round-image-size-big, 2) - 100px}), 0);
+
+        // Animation version 3
+        //transform: translateX(- math.div($round-image-size-big, 2) + 100px);
+        //margin-left: 50%;
+
+        // Animation version 4
+        //margin-left: - math.div($round-image-size-big, 2) + 100px;
       }
     }
 
     .last & {
       @include media-breakpoint-up(sm) {
-        //transform: translateX(calc(-50% + #{math.div($round-image-size, 2) - 50px}));
+        // Animation version 1
         margin-left: calc(-50% + #{math.div($round-image-size, 2) - 50px});
+
+        // Animation version 2
+        //transform: translate(calc(-50% + #{math.div($round-image-size, 2) - 50px}), 0);
+
+        // Animation version 3
+        //transform: translateX(math.div($round-image-size, 2) - 50px);
+        //margin-left: -50%;
+
+        // Animation version 4
+        //transform: translate(-50%, 0);
+        //margin-left: math.div($round-image-size, 2) - 50px;
       }
       @include media-breakpoint-up(lg) {
-        //transform: translateX(calc(-50% + #{math.div($round-image-size-medium, 2) - 50px}));
+        // Animation version 1
         margin-left: calc(-50% + #{math.div($round-image-size-medium, 2) - 50px});
+
+        // Animation version 2
+        //transform: translate(calc(-50% + #{math.div($round-image-size-medium, 2) - 50px}), 0);
+
+        // Animation version 3
+        //transform: translateX(math.div($round-image-size-medium, 2) - 50px);
+        //margin-left: -50%;
+
+        // Animation version 4
+        //margin-left: math.div($round-image-size-medium, 2) - 50px;
       }
       @include media-breakpoint-up(xl) {
-        //transform: translateX(calc(-50% + #{math.div($round-image-size-big, 2) - 100px}));
+        // Animation version 1
         margin-left: calc(-50% + #{math.div($round-image-size-big, 2) - 100px});
+
+        // Animation version 2
+        //transform: translate(calc(-50% + #{math.div($round-image-size-big, 2) - 100px}), 0);
+
+        // Animation version 3
+        //transform: translateX(math.div($round-image-size-big, 2) - 100px);
+        //margin-left: -50%;
+
+        // Animation version 4
+        //margin-left: math.div($round-image-size-big, 2) - 100px;
       }
     }
   }
@@ -187,7 +251,6 @@
   .title {
     transition: all math.div($scroll-down-transition-duration, 2) ease-out;
     max-height: 2em;
-
   }
 
   .pretitle,
