--- a/styles/components/_menu-button.scss
+++ b/styles/components/_menu-button.scss
@@ -3,11 +3,9 @@
   text-transform: uppercase;
 
   .chakra-button__icon {
-    .icon-button {
-      background-color: transparent;
-      box-shadow: none;
-      width: 40px;
-      height: 40px;
+    svg {
+      width: 30px;
+      height: 30px;
     }
   }
 }
