Vimeo video responsive

--- a/styles/components/_video.scss
+++ b/styles/components/_video.scss
@@ -7,7 +7,7 @@
     position: relative;
     width: 100% !important;
     height: inherit !important;
-    padding-bottom: 56.25%;
+    padding-bottom: 42%; // emory vimeo ratio
   }
 
   iframe {
