VIDEO - Disable scroll on body and hide scroll line decoration

--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -123,8 +123,10 @@
 }
 
 body.full_video {
+  overflow: hidden;
   .header-menu,
   .embla__button,
+  .line-separator,
   .actions {
     display: none;
   }
