IMAGES - Added scale for fill the bottom of media with expantion images.

--- a/styles/_atoms.scss
+++ b/styles/_atoms.scss
@@ -58,6 +58,9 @@ a {
   &.size--big {
     max-width: $round-image-size-big;
   }
+  img{
+    transform: scale(1.05);
+  }
 
   @include media-breakpoint-up(md){
     border-width: 12px;
