OVERLAY - Disable text before for hide the white line.

--- a/styles/components/_component-media-with-expansion.scss
+++ b/styles/components/_component-media-with-expansion.scss
@@ -42,6 +42,11 @@
     .overlay__text {
       margin: 20px auto;
       max-width: map-get($container-max-widths, 'md');
+      .text-body{
+        &:before{
+          content: unset;
+        }
+      }
     }
 
     .title {
